@@ -1,4 +1,5 @@
 .\" Copyright © 2000 Ben Collins <bcollins@debian.org>
+.\" Copyright © 2014 Guillem Jover <guillem@debian.org>
 .\"
 .\" Covered under the GPL v2
 .\"
